# command-code-adapter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: docker-build.yml
cc_adapter/: __main__.py  _shared.py  _utils.py  client.py  config.py  headers.py  logging.py  main.py  models_data.py
cc_adapter/admin/: auth.py  config_manager.py  router.py  state.py  usage_client.py
cc_adapter/anthropic/: models.py  request.py  response.py  router.py
cc_adapter/catalog/: models_data.py
cc_adapter/command_code/: body.py  client.py  headers.py
cc_adapter/core/: config.py  constants.py  errors.py  headers.py  key_pool.py  log_buffer.py  logging.py  model_fetcher.py  (+6 more)
tests/: conftest.py  e2e_test.sh  test_admin_auth.py  test_admin_health.py  test_admin_logs.py  test_admin_router.py  test_admin_state.py  test_anthropic_integration.py  test_anthropic_router.py  test_anthropic_translator.py  test_client.py  test_client_multikey.py  test_config_manager.py  test_deepseek_forward.py  test_headers.py  test_integration.py  test_key_pool.py  test_log_buffer.py  test_logging.py  test_main_auth.py  test_model_fetcher.py  test_model_mapping.py  test_openai_endpoints.py  test_request_translator.py  test_response_translator.py  test_responses_integration.py  test_responses_request_translator.py  test_responses_response.py  test_retry.py  test_session_extractor.py  test_tool_mapping.py  test_usage_client.py  test_utils.py  test_version_checker.py  test_web_search.py  test_zdr.py
(+32 files in other folders)
